[project]
name = "funsearch-cvrp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "absl-py>=2.4.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "vrplib>=2.1.0",
    "torch>=2.11.0",
    "openai>=2.30.0",
    "requests>=2.33.1",
    "tensorboard>=2.20.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130"},
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
